<resources>
    <string name="app_name">TestDemo</string>
    <string name="title_activity_signin">activity_signin</string>



    <string name="app_bar_login">Anmelden</string>
    <string name="hamburger">hamburger</string>
    <string name="profil">Profil</string>
    <string name="karte">Karte</string>
    <string name="angebotsliste">Angebotsliste</string>
    <string name="support">Support</string>
    <string name="abmelden">Abmelden</string>
    <string name="account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Sign In</string>
    <string-array name="categories">
        <item>Kategorien</item>
        <item>Fashion und Mode</item>
        <item>Haushalt</item>
        <item>Kraftfahrzeuge</item>
        <item>Musikinstrumente</item>
        <item>Möbel</item>
        <item>Technik</item>
    </string-array>
    <string name="art_name">Artikel Name</string>
    <string name="description">Beschreibung</string>
    <string name="price">Preis</string>
    <string name="category">Kategorie</string>
    <string name="location">Ort</string>
    <string name="create_art">Artikel einstellen</string>
    <string name="content_descr">Angebotsfoto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_l_schen">Account löschen</string>
    <string name="max_musterman_n_frankfurt_de_n_10_aktive_angebote">Max Musterman   Frankfurt, DE   10 aktive Angebote</string>
    <string name="adresse">Adresse</string>
    <string name="preis">Preis</string>
    <string name="angebotstitel">Angebotstitel</string>
</resources>
